syntax = "proto3";
import "SharedMessages.proto";

option java_multiple_files = true;
option java_package = "via.sep3.group11.tier2.protobuf";

service Housing {
  rpc addHousing(GAddHousingRequest) returns (GHousingWithStatus);
  rpc getAvailableHousing(Empty) returns (ListOfAvailableHousing);
  rpc removeHousing(GId) returns (Empty);
  rpc getHousingById(GId) returns (GHousingWithStatus);
  rpc updateHousing(GHousingWithStatus) returns (GHousingWithStatus);
}

message GAddHousingRequest{
  GHousing housing = 1;
  string email = 2;
}

message ListOfAvailableHousing{
  repeated GHousingWithStatus housings = 1;
}
