syntax = "proto3";

option java_multiple_files = true;
option java_package = "via.sep3.group11.tier2.protobuf";

// -- HOST
message GHostDetails{
  string firstName = 1;
  string email = 2;
  string password = 3;
  string gender = 4;
  string nationality = 5;
  string middleName = 6;
  string lastName = 7;
  GDateOfBirth dateOfBirth = 8;
}

message GHost{
  string firstName = 1;
  string email = 2;
  string password = 3;
  string gender = 4;
  string nationality = 5;
  string middleName = 6;
  string lastName = 7;
  GDateOfBirth dateOfBirth = 8;
  GHousing housing = 9;
}

// -- REFUGEE
message GRefugee{
  string email = 1;
  string password = 2;
  string gender = 3;
  string nationality = 4;
  string firstName = 5;
  string middleName = 6;
  string lastName = 7;
  GDateOfBirth dateOfBirth = 8;
}

// -- HOUSING
message GHousing{
  int32 capacity = 1;
  GAddress address = 2;
  int64 id = 3;
}

// -- OTHERS
message GEmail{
  string email = 1;
}

message GAddress{
  string country = 1;
  string city = 2;
  string streetName = 3;
  string houseNumber = 4;
  string roomNumber = 5;
  string postCode = 6;
  int64 id = 7;
}

message GDateOfBirth{
  int32 day = 1;
  int32 month = 2;
  int32  year = 3;
}

message GAgreement{
  int64 id = 1;
  GDateOfBirth dateOfCreation = 2;
  GHostDetails hostDetails = 3;
  GHousing housing = 4;
  GRefugee refugee = 5;
  bool status = 6;
}

message GId{
  int64 id = 1;
}

message Empty {}
